[metadata]
name = test_volta
version = 1.0.0
description = Technical test Volta Medical
long_description = file: README.md
author = leopoldbancel
author_email = leopoldbancel@hotmail.fr
license = Other/Proprietary License
classifiers =
    Development Status :: 3 - Alpha
    License :: Other/Proprietary License
    Natural Language :: English
    Natural Language :: French
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires =
    matplotlib==3.9.0
    numpy==1.26.4
    pandas==2.2.2
    scikit-learn==1.4.2
    scipy==1.13.0
    seaborn==0.13.2
    tqdm==4.66.4
    wfdb==4.1.2
    xgboost==2.0.3
python_requires = >=3.9
include_package_data = true